--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "redux": "^4.1.0",
+    "redux-api-middleware": "^3.2.1",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "shortid": "^2.2.16",
@@ -25,8 +26,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "server": "json-server --delay 300 --port 4040 db.json",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "server": "json-server --delay 300 --port 4040 --watch db.json "
   },
   "eslintConfig": {
     "extends": [
