--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "json-server": "^0.16.3",
+    "memoizee": "^0.4.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
@@ -16,6 +17,7 @@
     "redux-api-middleware": "^3.2.1",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
+    "reselect": "^4.0.0",
     "shortid": "^2.2.16",
     "web-vitals": "^1.1.1"
   },
